--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "authors": [
         {
             "name": "WideWeb",
-            "homepage": "WideWeb.pro"
+            "homepage": "https://WideWeb.pro"
         }
     ],
     "require": {
